# laygen

./: Cargo.toml  README.md  demo.sh
src/: cli.rs  file_ops.rs  generator.rs  i18n.rs  lib.rs  main.rs
