[package]
name = "laygen"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
anyhow = "1.0"
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "laygen"
path = "src/lib.rs"

[[bin]]
name = "laygen"
path = "src/main.rs"
